--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Hierdie items sal verwyder word.\nWil jy voortgaan?",
   "Dialog_ItemsWillBeProcessed": "Hierdie items sal {0} word.\nWil jy voortgaan?",
   "Dialog_Donation_Title": "Ondersteun Winhance",
-  "Dialog_Donation_Header_Title": "Dankie dat jy Winhance gebruik! ❤",
+  "Dialog_Donation_Header_Title": "Dankie dat jy Winhance gebruik!",
   "Dialog_Donation_Header_Message": "As jy hierdie hulpmiddel nuttig gevind het, oorweeg asseblief 'n klein skenking om ontwikkeling te ondersteun.",
   "Dialog_Donation_SupportMessage": "Jou ondersteuning help om hierdie projek aan die gang te hou!",
   "Dialog_Donation_Footer": "Klik 'Ja' om jou ondersteuning te wys!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Huidige Weergawe:",
   "Dialog_Update_LatestVersion": "Nuutste Weergawe:",
   "Dialog_Update_Footer": "Wil jy die opdatering nou aflaai en installeer?",
-  "Dialog_Update_Button_RemindLater": "Herinner Later",
   "Dialog_Update_Button_InstallNow": "Installeer Nou",
   "Dialog_Update_Status_Downloading": "Laai opdatering af...",
   "Dialog_Update_Status_Error": "Fout met aflaai van opdatering: {0}",
