--- a/src/Winhance.WPF/Localization/cs.json
+++ b/src/Winhance.WPF/Localization/cs.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Tyto položky budou odebrány.\nChcete pokračovat?",
   "Dialog_ItemsWillBeProcessed": "Tyto položky budou {0}.\nChcete pokračovat?",
   "Dialog_Donation_Title": "Podpořte Winhance",
-  "Dialog_Donation_Header_Title": "Děkujeme, že používáte Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Děkujeme, že používáte Winhance!",
   "Dialog_Donation_Header_Message": "Pokud vám tento nástroj pomohl, zvažte prosím malý příspěvek na podporu vývoje.",
   "Dialog_Donation_SupportMessage": "Vaše podpora pomáhá udržet tento projekt v chodu!",
   "Dialog_Donation_Footer": "Kliknutím na 'Ano' projevíte svou podporu!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Aktuální verze:",
   "Dialog_Update_LatestVersion": "Nejnovější verze:",
   "Dialog_Update_Footer": "Chcete si nyní stáhnout a nainstalovat aktualizaci?",
-  "Dialog_Update_Button_RemindLater": "Připomenout později",
   "Dialog_Update_Button_InstallNow": "Nainstalovat nyní",
   "Dialog_Update_Status_Downloading": "Stahování aktualizace...",
   "Dialog_Update_Status_Error": "Chyba při stahování aktualizace: {0}",
