--- a/src/Winhance.WPF/Localization/de.json
+++ b/src/Winhance.WPF/Localization/de.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Diese Elemente werden entfernt.\nMöchten Sie fortfahren?",
   "Dialog_ItemsWillBeProcessed": "Diese Elemente werden {0}.\nMöchten Sie fortfahren?",
   "Dialog_Donation_Title": "Winhance unterstützen",
-  "Dialog_Donation_Header_Title": "Danke, dass Sie Winhance verwenden! ❤",
+  "Dialog_Donation_Header_Title": "Danke, dass Sie Winhance verwenden!",
   "Dialog_Donation_Header_Message": "Wenn Sie dieses Tool hilfreich fanden, ziehen Sie bitte eine kleine Spende in Betracht, um die Entwicklung zu unterstützen.",
   "Dialog_Donation_SupportMessage": "Ihre Unterstützung hilft, dieses Projekt am Laufen zu halten!",
   "Dialog_Donation_Footer": "Klicken Sie auf 'Ja', um Ihre Unterstützung zu zeigen!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Aktuelle Version:",
   "Dialog_Update_LatestVersion": "Neueste Version:",
   "Dialog_Update_Footer": "Möchten Sie das Update jetzt herunterladen und installieren?",
-  "Dialog_Update_Button_RemindLater": "Später erinnern",
   "Dialog_Update_Button_InstallNow": "Jetzt installieren",
   "Dialog_Update_Status_Downloading": "Update wird heruntergeladen...",
   "Dialog_Update_Status_Error": "Fehler beim Herunterladen des Updates: {0}",
