--- a/src/Winhance.WPF/Localization/el.json
+++ b/src/Winhance.WPF/Localization/el.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Αυτά τα στοιχεία θα αφαιρεθούν.\nΘέλετε να συνεχίσετε;",
   "Dialog_ItemsWillBeProcessed": "Αυτά τα στοιχεία θα {0}.\nΘέλετε να συνεχίσετε;",
   "Dialog_Donation_Title": "Υποστήριξη Winhance",
-  "Dialog_Donation_Header_Title": "Ευχαριστούμε που χρησιμοποιείτε το Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Ευχαριστούμε που χρησιμοποιείτε το Winhance!",
   "Dialog_Donation_Header_Message": "Αν βρήκατε αυτό το εργαλείο χρήσιμο, σκεφτείτε να κάνετε μια μικρή δωρεά για να υποστηρίξετε την ανάπτυξη.",
   "Dialog_Donation_SupportMessage": "Η υποστήριξή σας βοηθά στη συνέχιση αυτού του έργου!",
   "Dialog_Donation_Footer": "Κάντε κλικ στο \u0027Ναι\u0027 για να δείξετε την υποστήριξή σας!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Τρέχουσα Έκδοση:",
   "Dialog_Update_LatestVersion": "Τελευταία Έκδοση:",
   "Dialog_Update_Footer": "Θέλετε να κατεβάσετε και να εγκαταστήσετε την ενημέρωση τώρα;",
-  "Dialog_Update_Button_RemindLater": "Υπενθύμιση Αργότερα",
   "Dialog_Update_Button_InstallNow": "Εγκατάσταση Τώρα",
   "Dialog_Update_Status_Downloading": "Λήψη ενημέρωσης...",
   "Dialog_Update_Status_Error": "Σφάλμα λήψης ενημέρωσης: {0}",
