--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "These items will be removed.\nDo you want to continue?",
   "Dialog_ItemsWillBeProcessed": "These items will be {0}ed.\nDo you want to continue?",
   "Dialog_Donation_Title": "Support Winhance",
-  "Dialog_Donation_Header_Title": "Thanks for using Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Thanks for using Winhance!",
   "Dialog_Donation_Header_Message": "If you found this tool helpful, please consider making a small donation to support development.",
   "Dialog_Donation_SupportMessage": "Your support helps keep this project going!",
   "Dialog_Donation_Footer": "Click \u0027Yes\u0027 to show your support!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Current Version:",
   "Dialog_Update_LatestVersion": "Latest Version:",
   "Dialog_Update_Footer": "Would you like to download and install the update now?",
-  "Dialog_Update_Button_RemindLater": "Remind Later",
   "Dialog_Update_Button_InstallNow": "Install Now",
   "Dialog_Update_Status_Downloading": "Downloading update...",
   "Dialog_Update_Status_Error": "Error downloading update: {0}",
