--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Estos elementos serán eliminados.\n¿Deseas continuar?",
   "Dialog_ItemsWillBeProcessed": "Estos elementos serán {0}.\n¿Deseas continuar?",
   "Dialog_Donation_Title": "Apoya a Winhance",
-  "Dialog_Donation_Header_Title": "¡Gracias por usar Winhance! ❤",
+  "Dialog_Donation_Header_Title": "¡Gracias por usar Winhance!",
   "Dialog_Donation_Header_Message": "Si esta herramienta te ha sido útil, considera hacer una pequeña donación para apoyar su desarrollo.",
   "Dialog_Donation_SupportMessage": "¡Tu apoyo ayuda a mantener este proyecto en marcha!",
   "Dialog_Donation_Footer": "¡Haz clic en 'Sí' para mostrar tu apoyo!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Versión Actual:",
   "Dialog_Update_LatestVersion": "Última Versión:",
   "Dialog_Update_Footer": "¿Te gustaría descargar e instalar la actualización ahora?",
-  "Dialog_Update_Button_RemindLater": "Recordar Más Tarde",
   "Dialog_Update_Button_InstallNow": "Instalar Ahora",
   "Dialog_Update_Status_Downloading": "Descargando actualización...",
   "Dialog_Update_Status_Error": "Error al descargar actualización: {0}",
