--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "ये आइटम हटा दिए जाएंगे।\nक्या आप जारी रखना चाहते हैं?",
   "Dialog_ItemsWillBeProcessed": "ये आइटम {0} किए जाएंगे।\nक्या आप जारी रखना चाहते हैं?",
   "Dialog_Donation_Title": "विनहान्स का समर्थन करें",
-  "Dialog_Donation_Header_Title": "विनहान्स का उपयोग करने के लिए धन्यवाद! ❤",
+  "Dialog_Donation_Header_Title": "विनहान्स का उपयोग करने के लिए धन्यवाद!",
   "Dialog_Donation_Header_Message": "यदि आपको यह टूल उपयोगी लगा, तो कृपया विकास का समर्थन करने के लिए एक छोटा सा दान देने पर विचार करें।",
   "Dialog_Donation_SupportMessage": "आपका समर्थन इस परियोजना को जारी रखने में मदद करता है!",
   "Dialog_Donation_Footer": "अपना समर्थन दिखाने के लिए 'हां' पर क्लिक करें!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "वर्तमान संस्करण:",
   "Dialog_Update_LatestVersion": "नवीनतम संस्करण:",
   "Dialog_Update_Footer": "क्या आप अभी अपडेट डाउनलोड और इंस्टॉल करना चाहेंगे?",
-  "Dialog_Update_Button_RemindLater": "बाद में याद दिलाएं",
   "Dialog_Update_Button_InstallNow": "अभी इंस्टॉल करें",
   "Dialog_Update_Status_Downloading": "अपडेट डाउनलोड हो रहा है...",
   "Dialog_Update_Status_Error": "अपडेट डाउनलोड करने में त्रुटि: {0}",
