--- a/src/Winhance.WPF/Localization/hu.json
+++ b/src/Winhance.WPF/Localization/hu.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Ezeket az elemeket eltávolítjuk.\nFolytatni szeretné?",
   "Dialog_ItemsWillBeProcessed": "Ezek az elemek {0} feldolgozásra kerülnek.\nFolytatni szeretné?",
   "Dialog_Donation_Title": "Winhance támogatása",
-  "Dialog_Donation_Header_Title": "Köszönjük, hogy a Winhance-t használja! ❤",
+  "Dialog_Donation_Header_Title": "Köszönjük, hogy a Winhance-t használja!",
   "Dialog_Donation_Header_Message": "Ha hasznosnak találta ezt az eszközt, kérjük, fontolja meg egy kisebb adomány felajánlását a fejlesztés támogatására.",
   "Dialog_Donation_SupportMessage": "A támogatásod segít, hogy ez a projekt tovább működhessen!",
   "Dialog_Donation_Footer": "Kattintson az „Igen” gombra, hogy kifejezze támogatását!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Jelenlegi verzió:",
   "Dialog_Update_LatestVersion": "Legújabb verzió:",
   "Dialog_Update_Footer": "Szeretné most letölteni és telepíteni a frissítést?",
-  "Dialog_Update_Button_RemindLater": "Emlékeztessen később",
   "Dialog_Update_Button_InstallNow": "Telepítés most",
   "Dialog_Update_Status_Downloading": "Frissítés letöltése...",
   "Dialog_Update_Status_Error": "Hiba a frissítés letöltése során: {0}",
