--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Questi elementi verranno rimossi.\nVuoi continuare?",
   "Dialog_ItemsWillBeProcessed": "Questi elementi verranno {0}.\nVuoi continuare?",
   "Dialog_Donation_Title": "Sostieni Winhance",
-  "Dialog_Donation_Header_Title": "Grazie per aver usato Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Grazie per aver usato Winhance!",
   "Dialog_Donation_Header_Message": "Se hai trovato utile questo strumento, considera di fare una piccola donazione per sostenere lo sviluppo.",
   "Dialog_Donation_SupportMessage": "Il tuo supporto aiuta a mantenere vivo questo progetto!",
   "Dialog_Donation_Footer": "Clicca 'Sì' per mostrare il tuo supporto!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Versione attuale:",
   "Dialog_Update_LatestVersion": "Ultima versione:",
   "Dialog_Update_Footer": "Vuoi scaricare e installare l'aggiornamento ora?",
-  "Dialog_Update_Button_RemindLater": "Ricorda più tardi",
   "Dialog_Update_Button_InstallNow": "Installa ora",
   "Dialog_Update_Status_Downloading": "Download dell'aggiornamento in corso...",
   "Dialog_Update_Status_Error": "Errore durante il download dell'aggiornamento: {0}",
