--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Šie elementai bus pašalinti.\nAr norite tęsti?",
   "Dialog_ItemsWillBeProcessed": "Šie elementai bus {0}.\nAr norite tęsti?",
   "Dialog_Donation_Title": "Paremkite Winhance",
-  "Dialog_Donation_Header_Title": "Ačiū, kad naudojatės Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Ačiū, kad naudojatės Winhance!",
   "Dialog_Donation_Header_Message": "Jei šis įrankis jums buvo naudingas, apsvarstykite galimybę paaukoti nedidelę sumą, kad paremtumėte plėtrą.",
   "Dialog_Donation_SupportMessage": "Jūsų parama padeda šiam projektui gyvuoti!",
   "Dialog_Donation_Footer": "Spustelėkite „Taip“, kad parodytumėte savo paramą!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Dabartinė versija:",
   "Dialog_Update_LatestVersion": "Naujausia versija:",
   "Dialog_Update_Footer": "Ar norėtumėte atsisiųsti ir įdiegti atnaujinimą dabar?",
-  "Dialog_Update_Button_RemindLater": "Priminti vėliau",
   "Dialog_Update_Button_InstallNow": "Įdiegti dabar",
   "Dialog_Update_Status_Downloading": "Atsisiunčiamas atnaujinimas...",
   "Dialog_Update_Status_Error": "Klaida atsisiunčiant atnaujinimą: {0}",
