--- a/src/Winhance.WPF/Localization/lv.json
+++ b/src/Winhance.WPF/Localization/lv.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Šie vienumi tiks noņemti.\nVai vēlaties turpināt?",
   "Dialog_ItemsWillBeProcessed": "Šie vienumi tiks {0}ēti.\nVai vēlaties turpināt?",
   "Dialog_Donation_Title": "Atbalstiet Winhance",
-  "Dialog_Donation_Header_Title": "Paldies, ka lietojat Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Paldies, ka lietojat Winhance!",
   "Dialog_Donation_Header_Message": "Ja šis rīks jums noderēja, lūdzu, apsveriet nelielu ziedojumu, lai atbalstītu izstrādi.",
   "Dialog_Donation_SupportMessage": "Jūsu atbalsts palīdz šim projektam turpināties!",
   "Dialog_Donation_Footer": "Noklikšķiniet uz 'Jā', lai parādītu savu atbalstu!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Pašreizējā versija:",
   "Dialog_Update_LatestVersion": "Jaunākā versija:",
   "Dialog_Update_Footer": "Vai vēlaties lejupielādēt un instalēt atjauninājumu tagad?",
-  "Dialog_Update_Button_RemindLater": "Atgādināt vēlāk",
   "Dialog_Update_Button_InstallNow": "Instalēt tagad",
   "Dialog_Update_Status_Downloading": "Lejupielādē atjauninājumu...",
   "Dialog_Update_Status_Error": "Kļūda, lejupielādējot atjauninājumu: {0}",
