--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Te elementy zostaną usunięte.\nCzy chcesz kontynuować?",
   "Dialog_ItemsWillBeProcessed": "Te elementy zostaną {0}.\nCzy chcesz kontynuować?",
   "Dialog_Donation_Title": "Wsparcie Winhance",
-  "Dialog_Donation_Header_Title": "Dziękujemy za korzystanie z Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Dziękujemy za korzystanie z Winhance!",
   "Dialog_Donation_Header_Message": "Jeśli to narzędzie okazało się pomocne, prosimy o rozważenie niewielkiej darowizny na wsparcie rozwoju.",
   "Dialog_Donation_SupportMessage": "Twoje wsparcie pomaga w utrzymaniu tego projektu!",
   "Dialog_Donation_Footer": "Kliknij 'Tak', aby okazać swoje wsparcie!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Aktualna wersja:",
   "Dialog_Update_LatestVersion": "Najnowsza wersja:",
   "Dialog_Update_Footer": "Czy chcesz pobrać i zainstalować aktualizację teraz?",
-  "Dialog_Update_Button_RemindLater": "Przypomnij później",
   "Dialog_Update_Button_InstallNow": "Zainstaluj teraz",
   "Dialog_Update_Status_Downloading": "Pobieranie aktualizacji...",
   "Dialog_Update_Status_Error": "Błąd pobierania aktualizacji: {0}",
