--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Estes itens serão removidos.\nDeseja continuar?",
   "Dialog_ItemsWillBeProcessed": "Estes itens serão {0}(s).\nDeseja continuar?",
   "Dialog_Donation_Title": "Apoie o Winhance",
-  "Dialog_Donation_Header_Title": "Obrigado por usar o Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Obrigado por usar o Winhance!",
   "Dialog_Donation_Header_Message": "Se você achou esta ferramenta útil, por favor, considere fazer uma pequena doação para apoiar o desenvolvimento.",
   "Dialog_Donation_SupportMessage": "Seu apoio ajuda a manter este projeto ativo!",
   "Dialog_Donation_Footer": "Clique em 'Sim' para mostrar seu apoio!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Versão Atual:",
   "Dialog_Update_LatestVersion": "Última Versão:",
   "Dialog_Update_Footer": "Gostaria de baixar e instalar a atualização agora?",
-  "Dialog_Update_Button_RemindLater": "Lembrar Mais Tarde",
   "Dialog_Update_Button_InstallNow": "Instalar Agora",
   "Dialog_Update_Status_Downloading": "Baixando atualização...",
   "Dialog_Update_Status_Error": "Erro ao baixar atualização: {0}",
