--- a/src/Winhance.WPF/Localization/sv.json
+++ b/src/Winhance.WPF/Localization/sv.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Dessa objekt kommer att tas bort.\nVill du fortsätta?",
   "Dialog_ItemsWillBeProcessed": "Dessa objekt kommer att {0}as.\nVill du fortsätta?",
   "Dialog_Donation_Title": "Stöd Winhance",
-  "Dialog_Donation_Header_Title": "Tack för att du använder Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Tack för att du använder Winhance!",
   "Dialog_Donation_Header_Message": "Om du tyckte att det här verktyget var till hjälp, överväg att göra en liten donation för att stödja utvecklingen.",
   "Dialog_Donation_SupportMessage": "Ditt stöd hjälper till att hålla detta projekt igång!",
   "Dialog_Donation_Footer": "Klicka på 'Ja' för att visa ditt stöd!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Nuvarande version:",
   "Dialog_Update_LatestVersion": "Senaste version:",
   "Dialog_Update_Footer": "Vill du ladda ner och installera uppdateringen nu?",
-  "Dialog_Update_Button_RemindLater": "Påminn mig senare",
   "Dialog_Update_Button_InstallNow": "Installera nu",
   "Dialog_Update_Status_Downloading": "Laddar ner uppdatering...",
   "Dialog_Update_Status_Error": "Fel vid nedladdning av uppdatering: {0}",
