--- a/src/Winhance.WPF/Localization/uk.json
+++ b/src/Winhance.WPF/Localization/uk.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Ці елементи буде видалено.\nБажаєте продовжити?",
   "Dialog_ItemsWillBeProcessed": "Ці елементи буде {0}ено.\nБажаєте продовжити?",
   "Dialog_Donation_Title": "Підтримати Winhance",
-  "Dialog_Donation_Header_Title": "Дякуємо за використання Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Дякуємо за використання Winhance!",
   "Dialog_Donation_Header_Message": "Якщо цей інструмент був для вас корисним, будь ласка, розгляньте можливість невеликої пожертви на підтримку розробки.",
   "Dialog_Donation_SupportMessage": "Ваша підтримка допомагає цьому проекту розвиватися!",
   "Dialog_Donation_Footer": "Натисніть 'Так', щоб показати свою підтримку!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Поточна версія:",
   "Dialog_Update_LatestVersion": "Остання версія:",
   "Dialog_Update_Footer": "Бажаєте завантажити та встановити оновлення зараз?",
-  "Dialog_Update_Button_RemindLater": "Нагадати пізніше",
   "Dialog_Update_Button_InstallNow": "Встановити зараз",
   "Dialog_Update_Status_Downloading": "Завантаження оновлення...",
   "Dialog_Update_Status_Error": "Помилка завантаження оновлення: {0}",
