--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Các mục này sẽ bị xóa.\nBạn có muốn tiếp tục không?",
   "Dialog_ItemsWillBeProcessed": "Các mục này sẽ được {0}.\nBạn có muốn tiếp tục không?",
   "Dialog_Donation_Title": "Hỗ trợ Winhance",
-  "Dialog_Donation_Header_Title": "Cảm ơn bạn đã sử dụng Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Cảm ơn bạn đã sử dụng Winhance!",
   "Dialog_Donation_Header_Message": "Nếu bạn thấy công cụ này hữu ích, vui lòng xem xét quyên góp nhỏ để hỗ trợ phát triển.",
   "Dialog_Donation_SupportMessage": "Sự hỗ trợ của bạn giúp dự án này tiếp tục!",
   "Dialog_Donation_Footer": "Nhấp vào 'Có' để thể hiện sự ủng hộ của bạn!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Phiên bản hiện tại:",
   "Dialog_Update_LatestVersion": "Phiên bản mới nhất:",
   "Dialog_Update_Footer": "Bạn có muốn tải xuống và cài đặt bản cập nhật ngay bây giờ không?",
-  "Dialog_Update_Button_RemindLater": "Nhắc tôi sau",
   "Dialog_Update_Button_InstallNow": "Cài đặt ngay",
   "Dialog_Update_Status_Downloading": "Đang tải xuống bản cập nhật...",
   "Dialog_Update_Status_Error": "Lỗi khi tải xuống bản cập nhật: {0}",
