--- a/src/Winhance.WPF/Localization/zh-Hant.json
+++ b/src/Winhance.WPF/Localization/zh-Hant.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "即將移除以下項目。\n您確定要繼續嗎？",
   "Dialog_ItemsWillBeProcessed": "即將{0}以下項目。\n您確定要繼續嗎？",
   "Dialog_Donation_Title": "支持 Winhance",
-  "Dialog_Donation_Header_Title": "感謝您使用 Winhance！ ❤",
+  "Dialog_Donation_Header_Title": "感謝您使用 Winhance！",
   "Dialog_Donation_Header_Message": "如果您覺得這個工具很有幫助，請考慮小額贊助以支持開發。",
   "Dialog_Donation_SupportMessage": "您的支持是這個專案持續下去的動力！",
   "Dialog_Donation_Footer": "點擊「是」以表達您的支持！",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "目前版本：",
   "Dialog_Update_LatestVersion": "最新版本：",
   "Dialog_Update_Footer": "您想要現在下載並安裝更新嗎？",
-  "Dialog_Update_Button_RemindLater": "稍後提醒",
   "Dialog_Update_Button_InstallNow": "立即安裝",
   "Dialog_Update_Status_Downloading": "正在下載更新...",
   "Dialog_Update_Status_Error": "下載更新時發生錯誤：{0}",
