--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -52,8 +52,9 @@
   "Dialog_ItemsWillBeInstalled": "Estos elementos serán instalados.\n¿Deseas continuar?",
   "Dialog_ItemsWillBeRemoved": "Estos elementos serán eliminados.\n¿Deseas continuar?",
   "Dialog_ItemsWillBeProcessed": "Estos elementos serán {0}.\n¿Deseas continuar?",
+  "Dialog_SaveRemovalScripts": "Guardar scripts de eliminación para asegurar la eliminación continua",
   "Dialog_Donation_Title": "Apoya a Winhance",
-  "Dialog_Donation_Header_Title": "¡Gracias por usar Winhance! ❤",
+  "Dialog_Donation_Header_Title": "¡Gracias por usar Winhance!",
   "Dialog_Donation_Header_Message": "Si esta herramienta te ha sido útil, considera hacer una pequeña donación para apoyar su desarrollo.",
   "Dialog_Donation_SupportMessage": "¡Tu apoyo ayuda a mantener este proyecto en marcha!",
   "Dialog_Donation_Footer": "¡Haz clic en 'Sí' para mostrar tu apoyo!",
@@ -63,7 +64,6 @@
   "Dialog_Update_CurrentVersion": "Versión Actual:",
   "Dialog_Update_LatestVersion": "Última Versión:",
   "Dialog_Update_Footer": "¿Te gustaría descargar e instalar la actualización ahora?",
-  "Dialog_Update_Button_RemindLater": "Recordar Más Tarde",
   "Dialog_Update_Button_InstallNow": "Instalar Ahora",
   "Dialog_Update_Status_Downloading": "Descargando actualización...",
   "Dialog_Update_Status_Error": "Error al descargar actualización: {0}",
@@ -1473,5 +1473,11 @@
   "ExternalApps_WinGetUnavailable": "No se puede determinar el estado de la instalación. Conéctese a Internet y haga clic en el botón Actualizar.",
   "Error_NoInternetConnection": "No hay conexión a Internet. Por favor, conéctese e inténtelo de nuevo.",
   "Error_WinGetInstallFailed": "Error al instalar WinGet. Por favor, compruebe su conexión a Internet.",
-  "Error_WinGetNotAvailable": "WinGet no está disponible en este sistema."
+  "Error_WinGetNotAvailable": "WinGet no está disponible en este sistema.",
+  "App_Tagline": "Mejora tu experiencia en Windows",
+  "Loading_InitializingSettings": "Inicializando configuración...",
+  "Loading_CreatingRestorePoint": "Creando punto de restauración del sistema. Por favor espera, esto puede tardar un poco...",
+  "Loading_MigratingScripts": "Migrando scripts...",
+  "Loading_CheckingScripts": "Comprobando actualizaciones de scripts...",
+  "Loading_PreparingApp": "Preparando la aplicación..."
 }
