--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -52,8 +52,9 @@
   "Dialog_ItemsWillBeInstalled": "Šie vienumi tiks instalēti.\nVai vēlaties turpināt?",
   "Dialog_ItemsWillBeRemoved": "Šie vienumi tiks noņemti.\nVai vēlaties turpināt?",
   "Dialog_ItemsWillBeProcessed": "Šie vienumi tiks {0}ēti.\nVai vēlaties turpināt?",
+  "Dialog_SaveRemovalScripts": "Saglabāt noņemšanas skriptus, lai nodrošinātu nepārtrauktu noņemšanu",
   "Dialog_Donation_Title": "Atbalstiet Winhance",
-  "Dialog_Donation_Header_Title": "Paldies, ka lietojat Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Paldies, ka lietojat Winhance!",
   "Dialog_Donation_Header_Message": "Ja šis rīks jums noderēja, lūdzu, apsveriet nelielu ziedojumu, lai atbalstītu izstrādi.",
   "Dialog_Donation_SupportMessage": "Jūsu atbalsts palīdz šim projektam turpināties!",
   "Dialog_Donation_Footer": "Noklikšķiniet uz 'Jā', lai parādītu savu atbalstu!",
@@ -63,7 +64,6 @@
   "Dialog_Update_CurrentVersion": "Pašreizējā versija:",
   "Dialog_Update_LatestVersion": "Jaunākā versija:",
   "Dialog_Update_Footer": "Vai vēlaties lejupielādēt un instalēt atjauninājumu tagad?",
-  "Dialog_Update_Button_RemindLater": "Atgādināt vēlāk",
   "Dialog_Update_Button_InstallNow": "Instalēt tagad",
   "Dialog_Update_Status_Downloading": "Lejupielādē atjauninājumu...",
   "Dialog_Update_Status_Error": "Kļūda, lejupielādējot atjauninājumu: {0}",
@@ -1473,5 +1473,11 @@
   "ExternalApps_WinGetUnavailable": "Nevar noteikt instalēšanas statusu. Izveidojiet savienojumu ar internetu un noklikšķiniet uz pogas Atsvaidzināt.",
   "Error_NoInternetConnection": "Nav interneta savienojuma. Lūdzu, izveidojiet savienojumu un mēģiniet vēlre.",
   "Error_WinGetInstallFailed": "Neizdevās instalēt WinGet. Lūdzu, pārbaudiet interneta savienojumu.",
-  "Error_WinGetNotAvailable": "WinGet šajā sistēmā nav pieejams."
+  "Error_WinGetNotAvailable": "WinGet šajā sistēmā nav pieejams.",
+  "App_Tagline": "Uzlabojiet savu Windows pieredzi",
+  "Loading_InitializingSettings": "Inicializē iestatījumus...",
+  "Loading_CreatingRestorePoint": "Veido sistēmas atjaunošanas punktu. Lūdzu, uzgaidiet, tas var aizņemt kādu laiku...",
+  "Loading_MigratingScripts": "Migrē skriptus...",
+  "Loading_CheckingScripts": "Pārbauda skriptu atjauninājumus...",
+  "Loading_PreparingApp": "Sagatavo lietotni..."
 }
