--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -52,8 +52,9 @@
   "Dialog_ItemsWillBeInstalled": "Ці елементи буде встановлено.\nБажаєте продовжити?",
   "Dialog_ItemsWillBeRemoved": "Ці елементи буде видалено.\nБажаєте продовжити?",
   "Dialog_ItemsWillBeProcessed": "Ці елементи буде {0}ено.\nБажаєте продовжити?",
+  "Dialog_SaveRemovalScripts": "Зберегти скрипти видалення для забезпечення безперервного видалення",
   "Dialog_Donation_Title": "Підтримати Winhance",
-  "Dialog_Donation_Header_Title": "Дякуємо за використання Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Дякуємо за використання Winhance!",
   "Dialog_Donation_Header_Message": "Якщо цей інструмент був для вас корисним, будь ласка, розгляньте можливість невеликої пожертви на підтримку розробки.",
   "Dialog_Donation_SupportMessage": "Ваша підтримка допомагає цьому проекту розвиватися!",
   "Dialog_Donation_Footer": "Натисніть 'Так', щоб показати свою підтримку!",
@@ -63,7 +64,6 @@
   "Dialog_Update_CurrentVersion": "Поточна версія:",
   "Dialog_Update_LatestVersion": "Остання версія:",
   "Dialog_Update_Footer": "Бажаєте завантажити та встановити оновлення зараз?",
-  "Dialog_Update_Button_RemindLater": "Нагадати пізніше",
   "Dialog_Update_Button_InstallNow": "Встановити зараз",
   "Dialog_Update_Status_Downloading": "Завантаження оновлення...",
   "Dialog_Update_Status_Error": "Помилка завантаження оновлення: {0}",
@@ -1473,5 +1473,11 @@
   "ExternalApps_WinGetUnavailable": "Неможливо визначити статус встановлення. Підключіться до Інтернету та натисніть кнопку Оновити.",
   "Error_NoInternetConnection": "Немає підключення до Інтернету. Будь ласка, підключіться та спробуйте ще раз.",
   "Error_WinGetInstallFailed": "Не вдалося встановити WinGet. Будь ласка, перевірте підключення до Інтернету.",
-  "Error_WinGetNotAvailable": "WinGet недоступний у цій системі."
+  "Error_WinGetNotAvailable": "WinGet недоступний у цій системі.",
+  "App_Tagline": "Покращте ваш досвід роботи з Windows",
+  "Loading_InitializingSettings": "Ініціалізація налаштувань...",
+  "Loading_CreatingRestorePoint": "Створення точки відновлення системи. Будь ласка, зачекайте, це може зайняти деякий час...",
+  "Loading_MigratingScripts": "Міграція скриптів...",
+  "Loading_CheckingScripts": "Перевірка оновлень скриптів...",
+  "Loading_PreparingApp": "Підготовка застосунку..."
 }
