--- a/src/Winhance.WPF/Localization/fr.json
+++ b/src/Winhance.WPF/Localization/fr.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Ces éléments seront supprimés.\nVoulez-vous continuer ?",
   "Dialog_ItemsWillBeProcessed": "Ces éléments seront {0}.\nVoulez-vous continuer ?",
   "Dialog_Donation_Title": "Soutenir Winhance",
-  "Dialog_Donation_Header_Title": "Merci d'utiliser Winhance ! ❤",
+  "Dialog_Donation_Header_Title": "Merci d'utiliser Winhance !",
   "Dialog_Donation_Header_Message": "Si cet outil vous a été utile, veuillez envisager de faire un petit don pour soutenir le développement.",
   "Dialog_Donation_SupportMessage": "Votre soutien aide à maintenir ce projet en vie !",
   "Dialog_Donation_Footer": "Cliquez sur 'Oui' pour montrer votre soutien !",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Version actuelle :",
   "Dialog_Update_LatestVersion": "Dernière version :",
   "Dialog_Update_Footer": "Voulez-vous télécharger et installer la mise à jour maintenant ?",
-  "Dialog_Update_Button_RemindLater": "Me le rappeler plus tard",
   "Dialog_Update_Button_InstallNow": "Installer maintenant",
   "Dialog_Update_Status_Downloading": "Téléchargement de la mise à jour...",
   "Dialog_Update_Status_Error": "Erreur lors du téléchargement de la mise à jour : {0}",
