--- a/src/Winhance.WPF/Localization/nl-BE.json
+++ b/src/Winhance.WPF/Localization/nl-BE.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Deze items worden verwijderd.\nWilt u doorgaan?",
   "Dialog_ItemsWillBeProcessed": "Deze items worden ge{0}.\nWilt u doorgaan?",
   "Dialog_Donation_Title": "Steun Winhance",
-  "Dialog_Donation_Header_Title": "Bedankt voor het gebruik van Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Bedankt voor het gebruik van Winhance!",
   "Dialog_Donation_Header_Message": "Als u deze tool nuttig vond, overweeg dan een kleine donatie om de ontwikkeling te steunen.",
   "Dialog_Donation_SupportMessage": "Uw steun houdt dit project gaande!",
   "Dialog_Donation_Footer": "Klik op \u0027Ja\u0027 om uw steun te betuigen!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Huidige Versie:",
   "Dialog_Update_LatestVersion": "Nieuwste Versie:",
   "Dialog_Update_Footer": "Wilt u de update nu downloaden en installeren?",
-  "Dialog_Update_Button_RemindLater": "Herinner mij later",
   "Dialog_Update_Button_InstallNow": "Nu Installeren",
   "Dialog_Update_Status_Downloading": "Update downloaden...",
   "Dialog_Update_Status_Error": "Fout bij downloaden update: {0}",
