--- a/src/Winhance.WPF/Localization/pt.json
+++ b/src/Winhance.WPF/Localization/pt.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Estes itens serão removidos.\nDeseja continuar?",
   "Dialog_ItemsWillBeProcessed": "Estes itens serão processados.\nDeseja continuar?",
   "Dialog_Donation_Title": "Apoie o Winhance",
-  "Dialog_Donation_Header_Title": "Obrigado por usar o Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Obrigado por usar o Winhance!",
   "Dialog_Donation_Header_Message": "Se achou esta ferramenta útil, por favor, considere fazer uma pequena doação para apoiar o desenvolvimento.",
   "Dialog_Donation_SupportMessage": "O seu apoio ajuda a manter este projeto vivo!",
   "Dialog_Donation_Footer": "Clique em 'Sim' para mostrar o seu apoio!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Versão Atual:",
   "Dialog_Update_LatestVersion": "Última Versão:",
   "Dialog_Update_Footer": "Gostaria de descarregar e instalar a atualização agora?",
-  "Dialog_Update_Button_RemindLater": "Lembrar Mais Tarde",
   "Dialog_Update_Button_InstallNow": "Instalar Agora",
   "Dialog_Update_Status_Downloading": "A descarregar atualização...",
   "Dialog_Update_Status_Error": "Erro ao descarregar atualização: {0}",
