--- a/src/Winhance.WPF/Localization/ru.json
+++ b/src/Winhance.WPF/Localization/ru.json
@@ -53,7 +53,7 @@
   "Dialog_ItemsWillBeRemoved": "Эти элементы будут удалены.\nВы хотите продолжить?",
   "Dialog_ItemsWillBeProcessed": "Эти элементы будут {0}.\nВы хотите продолжить?",
   "Dialog_Donation_Title": "Поддержать Winhance",
-  "Dialog_Donation_Header_Title": "Спасибо за использование Winhance! ❤",
+  "Dialog_Donation_Header_Title": "Спасибо за использование Winhance!",
   "Dialog_Donation_Header_Message": "Если этот инструмент оказался для вас полезным, пожалуйста, рассмотрите возможность небольшого пожертвования для поддержки разработки.",
   "Dialog_Donation_SupportMessage": "Ваша поддержка помогает этому проекту развиваться!",
   "Dialog_Donation_Footer": "Нажмите 'Да', чтобы показать свою поддержку!",
@@ -63,7 +63,6 @@
   "Dialog_Update_CurrentVersion": "Текущая версия:",
   "Dialog_Update_LatestVersion": "Последняя версия:",
   "Dialog_Update_Footer": "Хотите скачать и установить обновление сейчас?",
-  "Dialog_Update_Button_RemindLater": "Напомнить позже",
   "Dialog_Update_Button_InstallNow": "Установить сейчас",
   "Dialog_Update_Status_Downloading": "Загрузка обновления...",
   "Dialog_Update_Status_Error": "Ошибка загрузки обновления: {0}",
